fixed add button getting squished

--- a/public/style.css
+++ b/public/style.css
@@ -174,6 +174,7 @@ a:hover {
 .inline-form {
   margin-bottom: 2em;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 1em;
 }
